--- a/2D-Game-Engine.vcxproj.filters
+++ b/2D-Game-Engine.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClCompile Include="src\ui\Button.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\ui\FpsGraph.cpp">
+    <ClCompile Include="src\ui\MetricGraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\interfaces\IState.cpp">
@@ -64,6 +64,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ui\GuiElement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ECS\Systems\EnemySystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -101,7 +104,7 @@
     <ClInclude Include="include\ecs\components\NPC.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\ui\FpsGraph.h">
+    <ClInclude Include="include\ui\imgui\MetricGraph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\ui\Button.h">
@@ -177,6 +180,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\ui\GuiElement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ecs\components\Enemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ecs\components\Projectile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ecs\systems\EnemySystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
