--- a/2D-Game-Engine.vcxproj
+++ b/2D-Game-Engine.vcxproj
@@ -91,7 +91,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>include/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor/;include/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -124,7 +124,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>include/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor/;include/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -176,7 +176,9 @@
     <ClCompile Include="src\game\Tilemap.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\game\ObjectLayer.h" />
     <ClInclude Include="include\game\Tile.h" />
+    <ClInclude Include="include\game\TileMaps.h" />
     <ClInclude Include="include\managers\AudioManager.h" />
     <ClInclude Include="include\ecs\components\Camera.h" />
     <ClInclude Include="include\ecs\systems\CameraSystem.h" />
@@ -221,7 +223,7 @@
     <ClInclude Include="include\mathf.h" />
     <ClInclude Include="include\util\Event.h" />
     <ClInclude Include="include\managers\StateManager.h" />
-    <ClInclude Include="include\game\MapRenderPipeline.h" />
+    <ClInclude Include="include\game\TileMap.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\Wind.ogg">
