--- a/2D-Game-Engine.vcxproj.filters
+++ b/2D-Game-Engine.vcxproj.filters
@@ -78,18 +78,12 @@
     <ClCompile Include="src\game\Tilemap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\game\RenderMap.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\mathf.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\rapidxml.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\util\Event.h">
@@ -215,10 +209,16 @@
     <ClInclude Include="include\game\Tile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\game\Tilemap.h">
+    <ClInclude Include="include\game\TileLayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\game\TileLayer.h">
+    <ClInclude Include="include\game\TileMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\vendor\rapidxml.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\vendor\tileson.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
