--- a/2D-Game-Engine.vcxproj
+++ b/2D-Game-Engine.vcxproj
@@ -174,7 +174,7 @@
     <ClCompile Include="src\game\Tilemap.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\game\Animation.h" />
+    <ClInclude Include="include\game\TileAnimation.h" />
     <ClInclude Include="include\game\Frame.h" />
     <ClInclude Include="include\game\ObjectLayer.h" />
     <ClInclude Include="include\game\Property.h" />
