--- a/2D-Game-Engine.vcxproj.filters
+++ b/2D-Game-Engine.vcxproj.filters
@@ -218,7 +218,7 @@
     <ClInclude Include="include\game\ObjectLayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\game\TileAnimation.h">
+    <ClInclude Include="include\game\Animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\game\Frame.h">
@@ -228,6 +228,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\game\Property.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\util\helpers_graphics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\util\Logging.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
