--- a/2D-Game-Engine.vcxproj
+++ b/2D-Game-Engine.vcxproj
@@ -154,8 +154,6 @@
   <ItemGroup>
     <ClCompile Include="src\ui\Rectangle.cpp" />
     <ClCompile Include="src\managers\AudioManager.cpp" />
-    <ClCompile Include="src\ecs\Systems\CameraSystem.cpp" />
-    <ClCompile Include="src\ECS\Systems\EnemySystem.cpp" />
     <ClCompile Include="src\ui\GuiElement.cpp" />
     <ClCompile Include="src\ui\GUI.cpp" />
     <ClCompile Include="src\ui\Checkbox.cpp" />
@@ -167,21 +165,16 @@
     <ClCompile Include="src\interfaces\IState.cpp" />
     <ClCompile Include="src\ui\MetricGraph.cpp" />
     <ClCompile Include="src\ui\Button.cpp" />
-    <ClCompile Include="src\ECS\Systems\MovementSystem.cpp" />
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\ECS\Systems\PhysicsSystem.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\game\Tilemap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\FilePaths.h" />
     <ClInclude Include="include\managers\AudioManager.h" />
-    <ClInclude Include="include\ecs\components\Camera.h" />
-    <ClInclude Include="include\ecs\systems\CameraSystem.h" />
-    <ClInclude Include="include\ecs\systems\EnemySystem.h" />
-    <ClInclude Include="include\ecs\components\Enemy.h" />
-    <ClInclude Include="include\ecs\components\Projectile.h" />
+    <ClInclude Include="include\game\components\Camera.h" />
+    <ClInclude Include="include\game\components\Projectile.h" />
     <ClInclude Include="include\ui\Rectangle.h" />
     <ClInclude Include="include\ui\Widget.h" />
     <ClInclude Include="include\ui\GUI.h" />
@@ -191,13 +184,9 @@
     <ClInclude Include="include\states\SplashScreenState.h" />
     <ClInclude Include="include\types.h" />
     <ClInclude Include="include\states\MainMenuState.h" />
-    <ClInclude Include="include\ecs\components\NPC.h" />
     <ClInclude Include="include\interfaces\IState.h" />
     <ClInclude Include="include\ui\imgui\MetricGraph.h" />
     <ClInclude Include="include\ui\Button.h" />
-    <ClInclude Include="include\ecs\components\Collider.h" />
-    <ClInclude Include="include\ecs\systems\MovementSystem.h" />
-    <ClInclude Include="include\ecs\components\MovementController.h" />
     <ClInclude Include="include\Input.h" />
     <ClInclude Include="include\AssetCache.h" />
     <ClInclude Include="include\managers\AssetManager.h" />
@@ -206,19 +195,8 @@
     <ClInclude Include="include\vendor\rapidxml.hpp" />
     <ClInclude Include="include\vendor\tileson.hpp" />
     <ClInclude Include="src\Application.h" />
-    <ClInclude Include="include\ecs\components\Character.h" />
-    <ClInclude Include="include\ecs\components\GameObject.h" />
-    <ClInclude Include="include\ecs\ComponentArray.h" />
-    <ClInclude Include="include\ecs\ComponentManager.h" />
-    <ClInclude Include="include\ecs\Components.h" />
-    <ClInclude Include="include\ecs\CONSTANTS.h" />
-    <ClInclude Include="include\ecs\ECS.h" />
-    <ClInclude Include="include\ecs\EntityManager.h" />
-    <ClInclude Include="include\ecs\ecsmathf.h" />
-    <ClInclude Include="include\ecs\systems\PhysicsSystem.h" />
-    <ClInclude Include="include\ecs\systems\System.h" />
-    <ClInclude Include="include\ecs\SystemManager.h" />
-    <ClInclude Include="include\ecs\Types.h" />
+    <ClInclude Include="include\game\components\Character.h" />
+    <ClInclude Include="include\game\components\GameObject.h" />
     <ClInclude Include="include\mathf.h" />
     <ClInclude Include="include\util\Event.h" />
     <ClInclude Include="include\managers\StateManager.h" />
