--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=34,419
-Size=550,680
-Collapsed=1
+Pos=34,337
+Size=472,680
+Collapsed=0
 
 [Window][Debug]
 Pos=44,572
@@ -14,17 +14,32 @@ Size=427,198
 Collapsed=0
 
 [Window][Asset Cache Metrics]
-Pos=694,138
+Pos=392,138
 Size=361,123
 Collapsed=0
 
 [Window][Metrics]
-Pos=697,99
-Size=482,424
+Pos=392,99
+Size=409,566
 Collapsed=0
 
 [Window][Input]
-Pos=342,21
+Pos=61,112
 Size=312,619
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=362,307
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=1165,238
+Size=353,794
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
 Collapsed=0
 
